@@ -24,6 +24,7 @@ export(finbif_occurrence_load)
 export(finbif_records)
 export(finbif_request_token)
 export(finbif_taxa)
+export(from_schema)
 export(hist_xy)
 export(scientific_name)
 export(to_dwc)
