@@ -157,8 +157,9 @@
 <h4 class="hasAnchor">
 <a href="#new-features" class="anchor"></a>NEW FEATURES</h4>
 <ul>
-<li><p>“Lite” download files (occurrence record datasets of less than 10,000 records downloaded directlty from laji.fi) can now be imported using <code>finbif_occurrence_load</code>.</p></li>
+<li><p>“Lite” download files (occurrence record datasets of less than 10,000 records downloaded directly from laji.fi) can now be imported using <code>finbif_occurrence_load</code>.</p></li>
 <li><p>New filters (currently undocumented) <code>ely_center_id</code> and <code>region_id</code> are available for <code>finbif_occurrence</code>.</p></li>
+<li><p>New function, <code>from_schema</code>, to convert variable names from FinBIF schema to other styles.</p></li>
 </ul>
 </div>
 <div id="minor-improvements" class="section level4">
