@@ -289,9 +289,9 @@
       </tr><tr>
         
         <td>
-          <p><code><a href="to_dwc.html">to_dwc()</a></code> <code><a href="to_dwc.html">to_native()</a></code> </p>
+          <p><code><a href="to_dwc.html">to_dwc()</a></code> <code><a href="to_dwc.html">to_native()</a></code> <code><a href="to_dwc.html">from_schema()</a></code> </p>
         </td>
-        <td><p>Convert variable names to and from Darwin Core style</p></td>
+        <td><p>Convert variable names</p></td>
       </tr><tr>
         
         <td>
