@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Convert variable names to and from Darwin Core style — to_dwc • finbif</title>
+<title>Convert variable names — to_dwc • finbif</title>
 
 <!-- favicons -->
 <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
@@ -46,9 +46,8 @@
 
 
 
-<meta property="og:title" content="Convert variable names to and from Darwin Core style — to_dwc" />
-<meta property="og:description" content="Convert FinBIF native variable names to Darwin Core style variable names or
-vice versa." />
+<meta property="og:title" content="Convert variable names — to_dwc" />
+<meta property="og:description" content="Convert variable names to Darwin Core or FinBIF R package native style." />
 <meta property="og:image" content="/logo.png" />
 
 
@@ -147,27 +146,49 @@ vice versa." />
 <div class="row">
   <div class="col-md-9 contents">
     <div class="page-header">
-    <h1>Convert variable names to and from Darwin Core style</h1>
+    <h1>Convert variable names</h1>
     <small class="dont-index">Source: <a href='https://github.com/luomus/finbif/blob/master/R/utils.R'><code>R/utils.R</code></a></small>
     <div class="hidden name"><code>to_dwc.Rd</code></div>
     </div>
 
     <div class="ref-description">
-    <p>Convert FinBIF native variable names to Darwin Core style variable names or
-vice versa.</p>
+    <p>Convert variable names to Darwin Core or FinBIF R package native style.</p>
     </div>
 
     <pre class="usage"><span class='fu'>to_dwc</span><span class='op'>(</span><span class='va'>...</span><span class='op'>)</span>
 
-<span class='fu'>to_native</span><span class='op'>(</span><span class='va'>...</span><span class='op'>)</span></pre>
+<span class='fu'>to_native</span><span class='op'>(</span><span class='va'>...</span><span class='op'>)</span>
+
+<span class='fu'>from_schema</span><span class='op'>(</span>
+  <span class='va'>...</span>,
+  to <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='st'>"native"</span>, <span class='st'>"dwc"</span>, <span class='st'>"short"</span><span class='op'>)</span>,
+  file <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='st'>"none"</span>, <span class='st'>"citable"</span>, <span class='st'>"lite"</span><span class='op'>)</span>,
+  locale <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/c.html'>c</a></span><span class='op'>(</span><span class='st'>"en"</span>, <span class='st'>"fi"</span>, <span class='st'>"sv"</span><span class='op'>)</span>
+<span class='op'>)</span></pre>
 
     <h2 class="hasAnchor" id="arguments"><a class="anchor" href="#arguments"></a>Arguments</h2>
     <table class="ref-arguments">
     <colgroup><col class="name" /><col class="desc" /></colgroup>
     <tr>
       <th>...</th>
-      <td><p>Character. Variable names in FinBIF native or Darwin Core
-style.</p></td>
+      <td><p>Character. Variable names to convert. For <code>to_dwc</code> and <code>to_native</code>
+the names must be in the opposite format. For <code>from_schema</code> the names must
+be from the FinBIF schema (e.g., names returned https://api.laji.fi) or
+a FinBIF download file (citable or lite).</p></td>
+    </tr>
+    <tr>
+      <th>to</th>
+      <td><p>Character. Type of variable names to convert to.</p></td>
+    </tr>
+    <tr>
+      <th>file</th>
+      <td><p>Character. For variable names that are derived from a FinBIF
+download file which type of file.</p></td>
+    </tr>
+    <tr>
+      <th>locale</th>
+      <td><p>Character. For variable names from a lite download file which
+locale the file is in.</p></td>
     </tr>
     </table>
 
